--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <?xml version="1.0" encoding="utf-8"?>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="text_normal_size">20sp</dimen>
+    <dimen name="text_bigger_size">56sp</dimen>
+    <dimen name="text_normal_margin">10dp</dimen>
+    <dimen name="relative_layout_margin">15dp</dimen>
+    <dimen name="layout_marginBottom">8dp</dimen>
+    <dimen name="layout_marginLeft">24dp</dimen>
+    <dimen name="layout_marginRight">24dp</dimen>
+
+</resources>
