--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/player_a_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:style="@style/Text"
+                style="@style/Text"
                 android:hint="@string/player_a"
                 android:inputType="textCapWords" />
 
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/zero"
-                android:style="@style/Number"/>
+                style="@style/Number"/>
 
             <Button
                 android:layout_width="match_parent"
@@ -48,22 +48,6 @@
                 android:onClick="addOneForPlayerA"
                 android:text="@string/point" />
 
-            <TextView
-                android:id="@+id/player_a_foul_score"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/zero"
-                android:style="@style/Number"/>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="24dp"
-                android:onClick="addOneFoulForPlayerA"
-                android:text="@string/foul" />
-
         </LinearLayout>
 
         <View
@@ -72,7 +56,6 @@
             android:layout_marginTop="66dp"
             android:layout_marginBottom="56dp"
             android:background="@android:color/darker_gray"/>
-
 
         <LinearLayout
             android:layout_width="0dp"
@@ -85,7 +68,7 @@
                 android:id="@+id/player_b_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:style="@style/Text"
+                style="@style/Text"
                 android:hint="@string/player_b"
                 android:inputType="textCapWords" />
 
@@ -94,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/zero"
-                android:style="@style/Number"/>
+                style="@style/Number"/>
 
             <Button
                 android:layout_width="match_parent"
@@ -104,25 +87,6 @@
                 android:layout_marginRight="24dp"
                 android:onClick="addOneForPlayerB"
                 android:text="@string/point" />
-
-
-            <TextView
-                android:id="@+id/player_a_foul_score"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:paddingBottom="24dp"
-                android:text="@string/zero"
-                android:style="@style/Number"/>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="24dp"
-                android:onClick="addOneFoulForPlayerB"
-                android:text="@string/foul" />
 
         </LinearLayout>
 
